<resources>
    <string name="app_name">Story App</string>
    <string name="login_title">Login Account</string>
    <string name="login_subtitle">Hello, welcome back to our account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered yet? Create an Account</string>
    <string name="email_error_message">Email not valid</string>
    <string name="password_error_message">Password must be at least 8 characters long</string>
    <string name="register_title">Register Account</string>
    <string name="register_subtitle">Register your account, and share your story</string>
    <string name="name">Name</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="story_title">Story</string>
    <string name="story_detail_title">Detail</string>
    <string name="new_story_title">New Story</string>
    <string name="email_pass_incorrect">Your email or password incorrect</string>
    <string name="email_exists">Email has been used</string>
    <string name="register_success">Registration is successful. Please login!</string>
    <string name="logout">Logout</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout_alert">Are you sure want to logout?</string>
    <string name="story_not_found">Story not found</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="not_getting_permissions">Not getting permissions</string>
    <string name="camera_authority">com.ziss.storyapp.mycamera</string>
    <string name="choose_a_picture">Choose a picture</string>
</resources>