<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    android:paddingHorizontal="24dp"
    tools:context=".presentation.ui.MainActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_title"
        android:layout_marginBottom="75dp"
        android:text="@string/register_subtitle"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/register_subtitle"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_person_20"
        android:drawablePadding="36dp"
        android:drawableTint="@color/grey"
        android:hint="@string/name"
        android:paddingHorizontal="16dp" />

    <com.ziss.storyapp.presentation.components.EmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/ed_register_name"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_email_20"
        android:drawablePadding="36dp"
        android:drawableTint="@color/grey"
        android:hint="@string/email"
        android:paddingHorizontal="16dp" />


    <com.ziss.storyapp.presentation.components.PasswordEditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/ed_register_email"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_lock_20"
        android:drawablePadding="36dp"
        android:drawableTint="@color/grey"
        android:hint="@string/password"
        android:paddingHorizontal="16dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_register_password"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_shape"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/have_account"
        android:textAlignment="center"
        android:textSize="14sp" />

</RelativeLayout>