<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".presentation.ui.addStory.AddStoryActivity">

    <include
        android:id="@+id/appbar_layout"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/frame"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:background="@drawable/dotted_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
        tools:alpha="100" />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:alpha="0"
        android:background="@drawable/rounded_shape"
        android:src="@drawable/ic_photo_24"
        app:layout_constraintBottom_toBottomOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="@+id/frame"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toTopOf="@+id/frame"
        tools:alpha="100"
        tools:ignore="ContentDescription"
        tools:srcCompat="@drawable/ic_photo_24" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:backgroundTint="@color/orange"
        android:text="@string/camera"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:backgroundTint="@color/orange"
        android:text="@string/gallery"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera"
        tools:alpha="100" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:alpha="0"
        android:autofillHints="description"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:overScrollMode="ifContentScrolls"
        android:padding="10dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        tools:alpha="100" />

    <com.ziss.storyapp.presentation.components.MyButton
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:alpha="0"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description"
        tools:alpha="100" />

    <ProgressBar
        android:id="@+id/progress_indicator"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="@+id/button_add"
        app:layout_constraintStart_toStartOf="@+id/button_add"
        app:layout_constraintTop_toTopOf="@+id/button_add" />

</androidx.constraintlayout.widget.ConstraintLayout>